Slightly simplified popular lemma filtering function.